--- a/programs/mktrxfw/Makefile
+++ b/programs/mktrxfw/Makefile
@@ -2,6 +2,8 @@ RM?=	rm
 LDFLAGS+=	-lz -lcrypto
 PREFIX?=	/usr/local
 MIPSCC=mips-portbld-freebsd10.2-gcc
+MIPSOBJECTS=trxloader.o tinfl.o mem.o
+MIPSCFLAGS=-EL -O1 -g -fno-pic -mno-abicalls -nostdlib -I/usr/include
 GZIP=gzip -nc9
 OBJCOPY=mips-freebsd-objcopy
 
@@ -13,12 +15,12 @@ install:
 mktrxfw: 
 	cc -g mktrxfw.c crc32.c -o mktrxfw
 
-loader.elf: trxloader.o
-	$(MIPSCC) -g -EL -nostdlib trxloader.o -Xlinker -T -Xlinker loader.lds -o loader.elf
+loader.elf: $(MIPSOBJECTS)
+	$(MIPSCC) -g -EL -nostdlib $(MIPSOBJECTS) -Xlinker -T -Xlinker loader.lds -o loader.elf
 	#clang37 --target=mips -fintegrated-as head.S -c -o head.o
 
-trxloader.o: trxloader.c
-	$(MIPSCC) -EL -O2 -g -nostdlib -I/usr/include -c trxloader.c -o trxloader.o
+$(MIPSOBJECTS): $(.PREFIX).c
+	$(MIPSCC) $(MIPSCFLAGS) -c $(.PREFIX).c -o $(.PREFIX).o
 	
 loader: loader.elf
 	$(OBJCOPY) -S -O binary loader.elf loader
