[trx-boot] WIP migrate to LLVM

--- a/programs/mktrxfw/Makefile
+++ b/programs/mktrxfw/Makefile
@@ -6,9 +6,11 @@ CHKSRC=		main.c utils.c fw_chk.c crc32.c
 CC=		cc
 MIPSCC!=	(pkg info -l mips-gcc | grep '\-gcc$$')
 MIPSOBJECTS=	trxloader.o tinfl.o mem.o
+MIPSCC_CLANG=	cc -target mips
+MIPSOBJ_CLANG=	objjj/trxloader.o objjj/tinfl.o objjj/mem.o
 MIPSCFLAGS=	-EL -O1 -g -fno-pic -mno-abicalls -nostdlib -I/usr/include
 GZIP=		gzip -nc9
-LZMA=		/usr/local/bin/lzma e
+LZMA=		/usr/local/bin/lzma e 
 OBJCOPY=	mips-freebsd-objcopy
 
 all: mktrxfw mkchkfw loader.gz loader.lzma
@@ -24,6 +26,7 @@ mkchkfw:
 
 loader.elf: $(MIPSOBJECTS)
 	$(MIPSCC) -g -EL -nostdlib $(MIPSOBJECTS) -Xlinker -T -Xlinker loader.lds -o loader.elf
+	ld.lld $(MIPSOBJ_CLANG) -T loader.lds -o loader.elf.clang
 	#clang37 --target=mips -fintegrated-as head.S -c -o head.o
 
 $(MIPSOBJECTS): $(.PREFIX).c
@@ -31,6 +34,12 @@ $(MIPSOBJECTS): $(.PREFIX).c
 	
 loader: loader.elf
 	$(OBJCOPY) -S -O binary loader.elf loader
+	$(OBJCOPY) -S -O binary loader.elf.clang loader.clang	
+
+$(MIPSOBJECTS): $(.PREFIX).c
+	$(MIPSCC) $(MIPSCFLAGS) -c $(.PREFIX).c -o $(.PREFIX).o
+	mkdir -p objjj
+	$(MIPSCC_CLANG) $(MIPSCFLAGS) -c $(.PREFIX).c -o objjj/$(.PREFIX).o
 
 loader.gz: loader
 	$(GZIP) loader > loader.gz.unaligned
@@ -45,4 +54,4 @@ loader.lzma: loader
 	$(RM) loader.lzma.unaligned loader.lzma.zero
 
 clean:
-	$(RM) -f loader.elf loader loader.gz* mktrxfw mkchkfw *.o
+	$(RM) -f loader.elf loader loader.gz* mktrxfw mkchkfw *.o objjj/*
